# ChangeLog for sys-apps/coreutils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.283 2010/01/08 03:35:07 vapier Exp $

*coreutils-8.4 (13 Jan 2010)

  13 Jan 2010; Daniel Robbins <drobbins@funtoo.org> +coreutils-8.4.ebuild:
  new coreutils fixes upstream glibc 2.7-2.9 build failure in coreutils
  8.3. 

*coreutils-8.3 (08 Jan 2010)

  08 Jan 2010; Mike Frysinger <vapier@gentoo.org> +coreutils-8.3.ebuild:
  Version bump.

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> coreutils-8.2.ebuild:
  Add tac/-lrt build fix from upstream #298581 by Yuri Vasilevski. Include
  unicode patch from Fedora via USE=unicode #266866 by Glenn Sommer.

*coreutils-8.2 (11 Dec 2009)

  11 Dec 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-8.2.ebuild:
  Version bump.

  02 Dec 2009; Mike Frysinger <vapier@gentoo.org> coreutils-8.1.ebuild:
  Force people to start migrating to xz-utils.

*coreutils-8.1 (19 Nov 2009)

  19 Nov 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-8.1.ebuild:
  Version bump #288253 by RafaÅ MuÅ¼yÅo.

  09 Nov 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.6.ebuild:
  Use new packager flags to tag binaries with Gentoo info.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> coreutils-7.5-r1.ebuild:
  Marking coreutils-7.5 ppc64 for bug 287219

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> coreutils-7.5-r1.ebuild:
  Stable for HPPA (bug #287219).

*coreutils-7.5-r1 (18 Oct 2009)

  18 Oct 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.5-r1.ebuild:
  Add fix from newer versions for cp/mv problems on older kernels #289134 by
  Allen Brooker.

  12 Oct 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.5.ebuild,
  coreutils-7.6.ebuild:
  Inform people to reload their LS_COLOR env settings #288693 by Dirkjan
  Ochtman.

  10 Oct 2009; RaÃºl Porcel <armin76@gentoo.org> coreutils-7.5.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #287219
