@@ -9,11 +9,14 @@ DIST coreutils-8.2.tar.gz 10697533 RMD160 72ad3df1e0d2ebb982ce993e03410a11234b7a
 DIST coreutils-8.3-patches-1.tar.lzma 26720 RMD160 89d3945d1e72899c7630131510bf7c643ed5eff5 SHA1 a35e2e307d81a8a55af5f1e905ab22cacaa3ae12 SHA256 3dd611b4c859836b07f1ea96e38bfc0172be2bbbc057a7f256034a3930ae3f1b
 DIST coreutils-8.3.tar.gz 10734711 RMD160 36811004533df6e5fdc26bfafb21eff36c9ed87e SHA1 2ab33c39f971716e2fd64770b1e86a9da4226cce SHA256 10a64f0f0e223ff5c005e2dce6f1234d3ff39af85fd8068f82fdd76aaaacf051
 DIST coreutils-8.4.tar.gz 10519759 RMD160 26ba81ce235997bd6f82c903e8234f2c86e15b5a SHA1 89eefb041215c30408261f46f59dc08e4b500edf SHA256 8bb08d3f5843f25d0f306848cc3514889232267e68d9a66dd20e1e363d0d017f
+DIST coreutils-8.5-patches-1.tar.lzma 4456 RMD160 c91df722421089c9598a194bf5ae4d614d8ea990 SHA1 8bba5c4b0f946cdfe6d208dc5e507606b45a5c60 SHA256 5c805201cd08a3a9f8989c77239606d5266a037aeb7c00ec1d2224219af9a1a7
+DIST coreutils-8.5.tar.gz 10740866 RMD160 2fdba2f8b64c818b459533ba40f94ba7325720b3 SHA1 939144f16d05691753a87134436dd2bb8ea89851 SHA256 dd243e2ac7d0ed203b170ecfb8299643779e7501fec2b45ae1cea8a450fa8ca0
 EBUILD coreutils-7.5-r1.ebuild 4628 RMD160 f611f4ca3a1da2ebf2350f2b864fcbe09319b61e SHA1 99c7c9dd3437971c13ef38e42566e59a6a3a4545 SHA256 44faf0c5fa187e04696fe752b3ed0a95f8d4b40c6e045ec6c065094ca721129f
 EBUILD coreutils-7.6.ebuild 4780 RMD160 f40ce165aa7888045a0f28e4198e4d11cb605897 SHA1 0ca2e0228801651ee81454f6a04aef73db832e05 SHA256 22150c0c7cbd7d2709224445821558ffdeace828355bd29316033c35caa3d276
 EBUILD coreutils-8.1.ebuild 4753 RMD160 9d59de121f11f960978715d317d83b1b61333827 SHA1 98852deff3756da9fe11c7dfb0f6878b41084c6d SHA256 e3838607adab48571ac6ea97205d959097cda06967f766e6eee27ce1721b59b6
 EBUILD coreutils-8.2.ebuild 4832 RMD160 95f463395ca3bce514c1affc035117a86f86596d SHA1 7bd10cde1d6fbb811da3394799ef0819ac9ce6f9 SHA256 2c686ef13d86dbdb1c1621ae7dceb2fbdbb0f0d01180765caa1a1a4d1102b072
 EBUILD coreutils-8.3.ebuild 4832 RMD160 759752fb06d0fceac178485a6f6171a99ef6ca0a SHA1 3c3b7afc79971f638cb7fc10d2ce4533bb8ef4dd SHA256 0f4c3425ef6d8fe79d96289cb66efebae9e0967810cb0c6217457168dabf9a06
 EBUILD coreutils-8.4.ebuild 4041 RMD160 1a5fbf946d862c49750d8587bf0bca96b18d3a0d SHA1 58722f84ce7402b6955def8b4748f29438eaea2b SHA256 b1c2450372457c4ccfe49d195bdb240969354d680d98625a9983919ced9e6888
-MISC ChangeLog 42012 RMD160 5f113be694a41d64c3d4033691f5cc5892c1120d SHA1 38cbab95299f8adc650d53c80e2c6890ba23e186 SHA256 29e224e85d257212833051de8e66534bf3489d3c99eb8df59fbc45e66b176562
+EBUILD coreutils-8.5.ebuild 5036 RMD160 3e5bcbefdbfc7848cea50f3d4ad3b993626bfe8c SHA1 38d95004e68af93e5d80cde7dbb0730e3c0d7dce SHA256 b7e66c8babd7731447ccdf2c2de00b19f22b63f49ad8ff3a1437fafeca4d4573
+MISC ChangeLog 42156 RMD160 2972440cb35f951947874a23ead7d162a4080afb SHA1 6502eec2c8f689d0665e30d91588f658b66edbed SHA256 5b11a30dedb8886c02c6d1f4df56a4dea53476ff3c85765146f9f6a0930aeefd
 MISC metadata.xml 159 RMD160 20374040a73f9b696b96ce702c01753613d77890 SHA1 dadeb8925d5218a0ce2e5ce31f6805dd80a93e10 SHA256 22a65e1dc0ea303386ec83688d855d6a18609c6e3c30afe37822db44a180f6ef
